--- a/Adapter/Adapter.csproj
+++ b/Adapter/Adapter.csproj
@@ -43,11 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EnglishAndSpanishSpeaker.cs" />
-    <Compile Include="ILanguageAdapter.cs" />
-    <Compile Include="LanguageAdapter.cs" />
+    <Compile Include="EnglishChatService.cs" />
+    <Compile Include="IChatService.cs" />
+    <Compile Include="ChatAdapter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpanishChatService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
